--- a/templates/instrument/show.html.twig
+++ b/templates/instrument/show.html.twig
@@ -1,42 +1,90 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Instrument{% endblock %}
+{% block title %}Détail de l'Instrument{% endblock %}
 
 {% block body %}
-    <h1>Instrument</h1>
+    <h1>Détail de l'instrument : {{ instrument.typeInstrument ? instrument.typeInstrument.libelle : '' }} {{ instrument.marque ? instrument.marque.libelle : '' }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ instrument.id }}</td>
-            </tr>
-            <tr>
-                <th>NumSerie</th>
-                <td>{{ instrument.numSerie }}</td>
-            </tr>
-            <tr>
-                <th>DateAchat</th>
-                <td>{{ instrument.dateAchat ? instrument.dateAchat|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>PrixAchat</th>
-                <td>{{ instrument.prixAchat }}</td>
-            </tr>
-            <tr>
-                <th>Utilisation</th>
-                <td>{{ instrument.utilisation }}</td>
-            </tr>
-            <tr>
-                <th>CheminImage</th>
-                <td>{{ instrument.cheminImage }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row mt-4">
+        
+        {# --- BLOC D'AFFICHAGE DE L'IMAGE --- #}
+        <div class="col-md-4">
+            {#
+               LA SOLUTION FINALE :
+               - On part du dossier 'public/img/instruments/'.
+               - On prend l'ID de l'instrument (ex: 1).
+               - On ajoute l'extension '.jpg'.
+               - Le tout est géré par la fonction asset() pour créer une URL propre.
+            #}
+            <img src="{{ asset('img/instruments/' ~ instrument.id ~ '.jpg') }}" 
+                 alt="Photo de l'instrument {{ instrument.numSerie }}" 
+                 style="width: 200px; height: 200px;"
+                 class="img-fluid rounded shadow-sm">
+                 
+            
+        </div>
+        {# --- FIN DU BLOC IMAGE --- #}
 
-    <a href="{{ path('app_instrument_index') }}">back to list</a>
+        <div class="col-md-8">
+            <table class="table table-striped">
+                <tbody>
+                    <tr>
+                        <th style="width: 30%;">Numéro de Série</th>
+                        <td>{{ instrument.numSerie }}</td>
+                    </tr>
+                    <tr>
+                        <th>Marque</th>
+                        <td>{{ instrument.marque ? instrument.marque.libelle : 'Non définie' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Type</th>
+                        <td>{{ instrument.typeInstrument ? instrument.typeInstrument.libelle : 'Non défini' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Date d'achat</th>
+                        <td>{{ instrument.dateAchat ? instrument.dateAchat|date('d/m/Y') : '' }}</td>
+                    </tr>
+                    <tr>
+                        <th>Prix d'achat</th>
+                        <td>{{ instrument.prixAchat ? instrument.prixAchat|number_format(2, ',', ' ') ~ ' €' : '' }}</td>
+                    </tr>
+                     <tr>
+                        <th>Couleurs</th>
+                        <td>
+                            {% if instrument.couleurs is not empty %}
+                                {% for couleur in instrument.couleurs %}
+                                    <span class="badge bg-secondary">{{ couleur.nom }}</span>
+                                {% endfor %}
+                            {% else %}
+                                Aucune
+                            {% endif %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Accessoires</th>
+                        <td>
+                             {% if instrument.accessoires is not empty %}
+                                <ul>
+                                {% for accessoire in instrument.accessoires %}
+                                    <li>{{ accessoire.libelle }}</li>
+                                {% endfor %}
+                                </ul>
+                            {% else %}
+                                Aucun
+                            {% endif %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">edit</a>
+    <hr>
 
-    {{ include('instrument/_delete_form.html.twig') }}
+    <a href="{{ path('app_instrument_index') }}" class="btn btn-secondary">Retour à la liste</a>
+    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}" class="btn btn-warning">Modifier</a>
+    
+    <div style="display: inline-block;">
+        {{ include('instrument/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
