--- a/templates/professeur/show.html.twig
+++ b/templates/professeur/show.html.twig
@@ -1,54 +1,68 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Professeur{% endblock %}
+{% block title %}Détail de {{ professeur.prenom }} {{ professeur.nom }}{% endblock %}
 
 {% block body %}
-    <h1>Professeur</h1>
+    <h1>Détail du professeur : {{ professeur.prenom }} {{ professeur.nom }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ professeur.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ professeur.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ professeur.prenom }}</td>
-            </tr>
-            <tr>
-                <th>NumRue</th>
-                <td>{{ professeur.numRue }}</td>
-            </tr>
-            <tr>
-                <th>Rue</th>
-                <td>{{ professeur.rue }}</td>
-            </tr>
-            <tr>
-                <th>Copos</th>
-                <td>{{ professeur.copos }}</td>
-            </tr>
-            <tr>
-                <th>Ville</th>
-                <td>{{ professeur.ville }}</td>
-            </tr>
-            <tr>
-                <th>Tel</th>
-                <td>{{ professeur.tel }}</td>
-            </tr>
-            <tr>
-                <th>Mail</th>
-                <td>{{ professeur.mail }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row mt-4">
+        
+        <div class="col-md-4">
 
-    <a href="{{ path('app_professeur_index') }}">back to list</a>
+            <img src="{{ asset('img/professeurs/' ~ professeur.id ~ '.png') }}" 
+                 alt="Photo de {{ professeur.prenom }} {{ professeur.nom }}" 
+                 style="width: 200px; height: 200px;" {# J'ai repris votre style pour la taille #}
+                 class="img-fluid rounded shadow-sm">
+        </div>
 
-    <a href="{{ path('app_professeur_edit', {'id': professeur.id}) }}">edit</a>
+        <div class="col-md-8">
+            <table class="table table-striped"> {# J'ai ajouté 'table-striped' pour un look plus net #}
+                <tbody>
+                    <tr>
+                        <th style="width: 30%;">Nom complet</th>
+                        <td>{{ professeur.prenom }} {{ professeur.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Adresse</th>
+                        {# J'ai regroupé les champs d'adresse pour une meilleure lisibilité #}
+                        <td>
+                            {{ professeur.numRue }} {{ professeur.rue }}<br>
+                            {{ professeur.copos }} {{ professeur.ville }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Contact</th>
+                        <td>
+                            Téléphone : {{ professeur.tel }}<br>
+                            Mail : {{ professeur.mail }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Spécialités</th>
+                        <td>
+                            {# On affiche les types d'instruments enseignés par ce prof #}
+                            {% if professeur.typeInstrument is not empty %}
+                                {% for type in professeur.typeInstrument %}
+                                    <span class="badge bg-primary">{{ type.libelle }}</span>
+                                {% endfor %}
+                            {% else %}
+                                <span class="text-muted">Aucune spécialité renseignée</span>
+                            {% endif %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-    {{ include('professeur/_delete_form.html.twig') }}
+    </div>
+
+    <hr>
+
+    {# J'ai ajouté des classes Bootstrap à vos liens pour les transformer en boutons #}
+    <a href="{{ path('app_professeur_index') }}" class="btn btn-secondary">Retour à la liste</a>
+    <a href="{{ path('app_professeur_edit', {'id': professeur.id}) }}" class="btn btn-warning">Modifier</a>
+
+    <div style="display: inline-block;">
+        {{ include('professeur/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
