--- a/templates/classe_instrument/show.html.twig
+++ b/templates/classe_instrument/show.html.twig
@@ -1,26 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ClasseInstrument{% endblock %}
+{% block title %}Classe : {{ classe_instrument.libelle }}{% endblock %}
 
 {% block body %}
-    <h1>ClasseInstrument</h1>
+    <h1>Classe d'instrument : {{ classe_instrument.libelle }}</h1>
 
-    <table class="table">
+    <table class="table table-striped">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th style="width: 20%;">Id</th>
                 <td>{{ classe_instrument.id }}</td>
             </tr>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <td>{{ classe_instrument.libelle }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_classe_instrument_index') }}">back to list</a>
+    <div class="row mt-4">
+        <div class="col-md-12">
+            <h3>Types d'instruments dans cette classe</h3>
+            
+            {% if classe_instrument.typeInstruments is not empty %}
+                <ul class="list-group">
+                    {# On boucle sur chaque type d'instrument associé #}
+                    {% for type in classe_instrument.typeInstruments %}
+                        <li class="list-group-item">
+                            {{ type.libelle }}
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                {# Message si aucun type d'instrument n'est associé #}
+                <div class="alert alert-info">
+                    Aucun type d'instrument n'est actuellement associé à cette classe.
+                </div>
+            {% endif %}
+        </div>
+    </div>
 
-    <a href="{{ path('app_classe_instrument_edit', {'id': classe_instrument.id}) }}">edit</a>
+    <hr class="mt-4">
 
-    {{ include('classe_instrument/_delete_form.html.twig') }}
+    <a href="{{ path('app_classe_instrument_index') }}" class="btn btn-secondary">Retour à la liste</a>
+    <a href="{{ path('app_classe_instrument_edit', {'id': classe_instrument.id}) }}" class="btn btn-warning">Modifier</a>
+
+    <div style="display: inline-block;">
+        {{ include('classe_instrument/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
