Ajout des jours aux cours de la semaine

--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -41,6 +41,11 @@
                     </ul>
                 </td>
             </tr>
+            <tr>
+                <th>Jour</th>
+                <td>{{ cour.jour.libelle }} 
+                </td>
+            </tr>
         </tbody>
     </table>
 
